Adds EasyRecyclerAdapters Adds selector for list items (ripple API21) Adds toolbar on MainActivity Solves bug related to SwipeRefreshLayout and RecyclerView

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -2,7 +2,7 @@
 
     <style name="BaseAppTheme" parent="Theme.AppCompat">
         <item name="android:windowNoTitle">true</item>
-        <item name="android:windowBackground">@color/primary</item>
+        <item name="android:windowBackground">@color/primary_dark</item>
     </style>
 
     <style name="AppTheme" parent="BaseAppTheme">
