--- a/app/src/main/res/layout/item_contact.xml
+++ b/app/src/main/res/layout/item_contact.xml
@@ -10,12 +10,13 @@
         android:background="@drawable/list_selector">
 
     <ImageView
-            tools:src="@drawable/abc_ic_ab_back_mtrl_am_alpha"
             android:id="@+id/imageView"
             android:layout_width="@dimen/avatar_size"
             android:layout_height="@dimen/avatar_size"
             android:transitionName="picture"
-            />
+            tools:src="@drawable/ic_contact_placerholder"
+            tools:background="@color/accent"
+        />
 
     <LinearLayout
             android:orientation="vertical"
