--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,15 +1,17 @@
 <resources>
 
-    <style name="BaseAppTheme" parent="Theme.AppCompat.Light.NoActionBar">
-        <item name="android:windowBackground">@android:color/white</item>
-    </style>
-
-    <style name="AppTheme" parent="BaseAppTheme">
+    <style name="BaseAppTheme" parent="@style/Theme.AppCompat.Light">
+        <item name="android:actionMenuTextColor">@android:color/white</item>
         <item name="colorPrimary">@color/primary</item>
         <item name="colorPrimaryDark">@color/primary_dark</item>
         <item name="colorAccent">@color/accent</item>
+        <item name="colorControlHighlight">@color/accent</item>
+        <item name="android:windowNoTitle">true</item>
         <item name="windowActionBar">false</item>
-        <item name="actionMenuTextColor">@android:color/white</item>
+    </style>
+
+    <style name="AppTheme" parent="BaseAppTheme">
+
     </style>
     
 </resources>
