--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -7,8 +7,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <include layout="@layout/transparent_toolbar"/>
-
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -28,23 +26,39 @@
                 tools:background="@android:color/black"
                 />
 
+            <TextView
+                android:id="@+id/nameTextView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="32dp"
+                android:gravity="center"
+                android:layout_alignBottom="@+id/contactImage"
+                android:fontFamily="sans-serif"
+                android:textColor="@android:color/white"
+                android:textSize="32sp"
+                android:transitionName="name"
+                tools:text="eufrasio pelete"
+                />
+
             <com.melnykov.fab.FloatingActionButton
                 android:id="@+id/button_floating_action"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                fab:fab_colorNormal="?attr/colorAccent"
-                fab:fab_shadow="true"
-                fab:fab_colorPressed="?attr/colorPrimary"
                 android:layout_marginTop="200dp"
                 android:layout_marginRight="16dp"
                 android:layout_alignParentRight="true"
+                android:src="@drawable/ic_star"
+                fab:fab_colorNormal="?attr/colorAccent"
+                fab:fab_shadow="true"
+                fab:fab_colorPressed="?attr/colorPrimary"
                 />
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="500dp"
+                android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:layout_below="@+id/contactImage"
+                android:padding="32dp"
                 >
 
                 </LinearLayout>
@@ -52,5 +66,7 @@
             </RelativeLayout>
 
     </ScrollView>
+
+    <include layout="@layout/transparent_toolbar"/>
 
 </FrameLayout>
