--- a/app/src/main/res/layout/contact_info_view.xml
+++ b/app/src/main/res/layout/contact_info_view.xml
@@ -3,37 +3,41 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal">
+    android:orientation="horizontal"
+    >
 
     <ImageView
         android:id="@+id/icon"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
+        android:layout_width="24dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
         tools:src="@mipmap/ic_launcher"
         />
 
-    <FrameLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:paddingLeft="16dp"
+        android:paddingRight="16dp"
         android:orientation="vertical"
-        android:layout_marginLeft="16dp"
         >
 
         <TextView
             android:id="@+id/infoValue"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
+            android:layout_weight="1"
             tools:text="(650) 555-12345"
-            android:layout_gravity="top"/>
+            />
 
         <TextView
             android:id="@+id/infoLabel"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom"
+            android:layout_height="0dp"
+            android:layout_weight="1"
             tools:text="mobile"
             />
 
-    </FrameLayout>
+    </LinearLayout>
 
 </merge>
