--- a/app/src/main/res/layout/item_contact.xml
+++ b/app/src/main/res/layout/item_contact.xml
@@ -7,7 +7,8 @@
     android:padding="@dimen/item_padding"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/list_selector">
+    android:background="@drawable/list_selector"
+    >
 
     <ImageView
         android:id="@+id/imageView"
@@ -21,7 +22,8 @@
     <LinearLayout
         android:orientation="vertical"
         android:gravity="center_vertical"
-        android:layout_marginLeft="@dimen/item_padding"
+        android:paddingLeft="@dimen/item_padding"
+        android:paddingRight="@dimen/item_padding"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
