--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,5 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="avatar_size">40dp</dimen>
     <dimen name="item_padding">16dp</dimen>
+    <dimen name="default_elevation">8dp</dimen>
 </resources>
